[gd_scene load_steps=20 format=2]

[ext_resource path="res://Actors/Player/Sword.tres" type="Texture" id=1]
[ext_resource path="res://Actors/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Looting/PickupArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Actors/Player/ExperienceSystem.gd" type="Script" id=4]
[ext_resource path="res://Actors/Health.tscn" type="PackedScene" id=5]
[ext_resource path="res://Actors/BlinkingMaterial.tres" type="Material" id=6]
[ext_resource path="res://Actors/Player/MeleeWeapon.gd" type="Script" id=7]
[ext_resource path="res://Curves/CurveLine.tres" type="Curve" id=8]
[ext_resource path="res://Actors/Player/PlayerHoodRed.tres" type="Texture" id=9]
[ext_resource path="res://Actors/DamageTaker.tscn" type="PackedScene" id=10]
[ext_resource path="res://Actors/Player/PickupAnimation.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 6 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/WeaponPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "SwingAnimation"
length = 0.366667
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/WeaponPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.133333, 0.366667 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0, 60.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Pivot/WeaponPivot/MeleeWeapon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0333333, 0.0666667, 0.1, 0.133333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "AddLine"
}, {
"args": [  ],
"method": "AddLine"
}, {
"args": [  ],
"method": "AddLine"
}, {
"args": [  ],
"method": "ClearLines"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/WeaponPivot/MeleeWeapon:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.0333333, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "SwingAnimation2"
length = 0.366667
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/WeaponPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.133333, 0.366667 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 60.0, -60.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Pivot/WeaponPivot/MeleeWeapon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0333333, 0.0666667, 0.1, 0.133333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "AddLine"
}, {
"args": [  ],
"method": "AddLine"
}, {
"args": [  ],
"method": "AddLine"
}, {
"args": [  ],
"method": "ClearLines"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/WeaponPivot/MeleeWeapon:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.0333333, 0.166667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9.33333, 20.6667 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.441176, 1 )
colors = PoolColorArray( 0.992157, 0.635294, 0.270588, 1, 0.992157, 0.635294, 0.270588, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 5
emission_ring_radius = 5.0
emission_ring_inner_radius = 4.0
emission_ring_height = 0.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.25
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
color_ramp = SubResource( 8 )
hue_variation_random = 1.0

[node name="Player" type="KinematicBody2D"]
z_as_relative = false
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
pickUpAnimation = ExtResource( 11 )

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 3 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 6 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="PickupArea" parent="." instance=ExtResource( 3 )]
speed = 10.0

[node name="ExperienceSystem" type="Node" parent="."]
script = ExtResource( 4 )
increase = 1.02
increase_method = 1

[node name="DamageTaker" parent="." instance=ExtResource( 10 )]
health_path = NodePath("../Health")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Health" parent="." instance=ExtResource( 5 )]

[node name="HPRegTimer" type="Timer" parent="."]

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Pivot" type="Node2D" parent="."]
z_as_relative = false

[node name="WeaponPivot" type="Node2D" parent="Pivot"]

[node name="MeleeWeapon" type="Area2D" parent="Pivot/WeaponPivot"]
position = Vector2( 15, 2 )
rotation = 0.785398
scale = Vector2( 0.75, 0.75 )
collision_layer = 16
collision_mask = 8
monitorable = false
script = ExtResource( 7 )

[node name="SwingAnimation" type="AnimationPlayer" parent="Pivot/WeaponPivot/MeleeWeapon"]
root_node = NodePath("../../../..")
anims/RESET = SubResource( 2 )
anims/SwingAnimation = SubResource( 3 )
anims/SwingAnimation2 = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Pivot/WeaponPivot/MeleeWeapon"]
scale = Vector2( 1.855, 1.855 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/WeaponPivot/MeleeWeapon"]
position = Vector2( -1.41421, -0.471404 )
rotation = 0.785398
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="Pivot/WeaponPivot/MeleeWeapon"]
autostart = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="Pivot/WeaponPivot/MeleeWeapon"]
position = Vector2( 1.88562, -15.0849 )
rotation = -0.785398
emitting = false
preprocess = 0.75
fract_delta = false
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, -10 )
tangential_accel = 50.0
angle = 90.0
scale_amount = 5.0

[node name="Node" type="Node" parent="Pivot/WeaponPivot/MeleeWeapon"]

[node name="Line2D" type="Line2D" parent="Pivot/WeaponPivot/MeleeWeapon/Node"]
width = 2.0
width_curve = ExtResource( 8 )
default_color = Color( 1, 1, 1, 0.654902 )
begin_cap_mode = 1
end_cap_mode = 1

[node name="Tween" type="Tween" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 5.2556, -5.88628 )
emitting = false
lifetime = 0.25
one_shot = true
process_material = SubResource( 6 )

[connection signal="item_picked_up" from="PickupArea" to="." method="_on_PickupArea_item_picked_up"]
[connection signal="damageTaken" from="Health" to="." method="_on_Health_damageTaken"]
[connection signal="timeout" from="HPRegTimer" to="." method="_on_HPRegTimer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="body_entered" from="Pivot/WeaponPivot/MeleeWeapon" to="Pivot/WeaponPivot/MeleeWeapon" method="_on_MeleeWeapon_body_entered"]
[connection signal="timeout" from="Pivot/WeaponPivot/MeleeWeapon/Timer" to="Pivot/WeaponPivot/MeleeWeapon" method="_on_Timer_timeout"]

[editable path="PickupArea"]
